@@ -9,7 +9,6 @@ log.command.invalidpath=Invalid revision/path combination for logs
 error.heading.no-route-to-host=The Subversion server could not be contacted.
 error.message.no-route-to-host=The Subversion server could not be contacted. If you are certain that the server is running, this error may be due to network problems.
 
-
 # Function links
 functionlinks.error.message=No function link style for pagename {0}
 search.text=Search current directory and below
@@ -21,6 +20,10 @@ showlog.button.tooltip=Show log for {0}
 download.button.text=Download
 diffprev.button.text=Diff to previous
 diffprev.button.tooltip=Diff this file revision ({0}) to previous
+diff.button.text=Show diff
+diff.button.tooltip=Show diff in side by side mode
+unifieddiff.button.text=Show unified diff
+unifieddiff.button.tooltip=Show diff in unified mode
 showlocks.button.text=Show locks
 flatten.button.text=Flatten dir
 flatten.button.tooltip=Flatten directory structure from current location
